tests/NormalTests/paczka1/fuzzy1/20344133.err
Error in line 9: nPhx5rpDU S10 51,2
Error in line 16: nPhx5rpDU A80 26,1
Error in line 10: IBaFR S10 72,7
Error in line 22: nPhx5rpDU S10 41,6
Error in line 32: lSkbY2Dlni2 S10 1,0
Error in line 33: lSkbY2Dlni2 A208 16,2
